--- a/AndroidStudio/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".facebookAvt"></activity>
+        <activity android:name=".facebookAvt" />
+        <activity android:name=".UserDetail"></activity>
     </application>
 
 </manifest>
