--- a/AndroidStudio/app/build.gradle
+++ b/AndroidStudio/app/build.gradle
@@ -19,7 +19,8 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:support-v4:28.0.0'
