--- a/AndroidStudio/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
         <activity android:name=".Views.facebookAvt" />
         <activity android:name=".Views.UserDetailView" />
         <activity android:name=".Views.SearchView" />
-        <activity android:name=".Views.AseoresView"></activity>
+        <activity android:name=".Views.AseoresView" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
