--- a/AndroidStudio/app/build.gradle
+++ b/AndroidStudio/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.1'
     implementation 'com.google.firebase:firebase-storage:16.0.2'
     apply plugin: 'com.google.gms.google-services'
+    ////////////////////
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
 apply plugin: 'com.google.gms.google-services'
