--- a/AndroidStudio/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
-        <activity android:name=".Views.facebookAvt" />
+        <activity android:name=".Views.FacebookLoginView" />
         <activity android:name=".Views.UserDetailView" />
         <activity android:name=".Views.SearchView" />
         <activity android:name=".Views.AseoresView" android:screenOrientation="portrait"></activity>
