--- a/AndroidStudio/app/src/main/AndroidManifest.xml
+++ b/AndroidStudio/app/src/main/AndroidManifest.xml
@@ -42,13 +42,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings" />
         <activity android:name=".Views.FacebookLoginView" />
         <activity android:name=".Views.UserDetailView" />
-        <activity android:name=".Views.SearchView" />
-        <activity android:name=".Views.AseoresView" android:screenOrientation="portrait"></activity>
+        <activity android:name=".Views.SubjectView" />
+        <activity android:name=".Views.ConsultantView" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
