--- a/AndroidStudio/app/build.gradle
+++ b/AndroidStudio/app/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     apply plugin: 'com.google.gms.google-services'
     ////////////////////
     implementation 'com.squareup.picasso:picasso:2.71828'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
